# tariff_map

./: .env  .env.example  .gitignore  README.md  app.py  pyproject.toml  requirements.txt
access_control/: __init__.py  auth.py
application/: __init__.py  tariff_map_service.py
core/: __init__.py  config.py  logging_config.py
data/: logistics_cities.json  logistics_nodes.json  logistics_nodes_extra.json  sea_waypoints.json
data/raw/: MacMap_Data_354182.xlsx
data/tariffs/: tobacco_index.json  unmapped_partners.txt
domain/: __init__.py  models.py
integration/: __init__.py  wits_adapter.py  wto_adapter.py
interface/: __init__.py  api.py  web.py
static/css/: styles.css
static/favicon/: README.md  site.webmanifest
static/js/: main.js
templates/: index.html  login.html
tools/: build_tariff_index_from_macmap.py
